Crete a basic form with two way data binding

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -9,3 +9,6 @@ appTitle=DataBinding
 appDescription=Data Binding Tutorial
 #XTIT: Main view title
 title=DataBinding
+
+#Panel
+panelHeaderText=Data Binding Basics
