Display address details

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -13,3 +13,7 @@ title=DataBinding
 #Panel
 panelHeaderText=Data Binding Basics
 buttonDisplay=Display details
+
+#Panel
+panelAddressHeaderText=Address Details
+address=Address
