Create an email button

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -17,3 +17,8 @@ buttonDisplay=Display details
 #Panel
 panelAddressHeaderText=Address Details
 address=Address
+
+#Email
+sendEmail=Send Mail
+mailSubject=Hi {0}!
+mailBody=How are you?
