Display user sales

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -17,6 +17,7 @@ buttonDisplay=Display details
 #Panel
 panelAddressHeaderText=Address Details
 address=Address
+salesAmount=Sales Amount
 
 #Email
 sendEmail=Send Mail
