Create product list

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -10,14 +10,18 @@ appDescription=Data Binding Tutorial
 #XTIT: Main view title
 title=DataBinding
 
-#Panel
+#Panel Data binding
 panelHeaderText=Data Binding Basics
 buttonDisplay=Display details
 
-#Panel
+#Panel Address Details
 panelAddressHeaderText=Address Details
 address=Address
 salesAmount=Sales Amount
+
+# Panel Product List
+panelProductListHeaderText=Product List
+stockValue=Current Stock Value
 
 #Email
 sendEmail=Send Mail
