Display data of a product in a details panel

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -23,6 +23,15 @@ salesAmount=Sales Amount
 panelProductListHeaderText=Product List
 stockValue=Current Stock Value
 
+# Panel Product Detail
+panelProductDetailsHeaderText=Product Details
+ProductID=Product ID
+ProductName=Product Name
+QuantityPerUnit=Quantity per Unit
+UnitPrice=Unit Price
+UnitsInStock=Units in Stock
+Discontinued=Discontinued
+
 #Email
 sendEmail=Send Mail
 mailSubject=Hi {0}!
