Distinguish discontinued items in the products list

--- a/databinding/webapp/i18n/i18n.properties
+++ b/databinding/webapp/i18n/i18n.properties
@@ -31,6 +31,7 @@ QuantityPerUnit=Quantity per Unit
 UnitPrice=Unit Price
 UnitsInStock=Units in Stock
 Discontinued=Discontinued
+outOfStock=Out of Stock
 
 #Email
 sendEmail=Send Mail
